# emx-ort-test-materializer

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARTIFACT_VALIDATION_ERRORS.md  DEVELOPMENT.md  README.md  artifact_generation_ignored_cases.json  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: refresh-artifact-dataset.yml  regenerate-artifacts-pr.yml
artifacts/: MANIFEST.json  OPERATORS.md  README.md  VALIDATION_ERRORS.md
artifacts/onnxruntime-negative/test/contrib_ops/expand_dims_test/NegativeAxisOutOfRange_run0/: model.onnx  validation.json
artifacts/onnxruntime-negative/test/contrib_ops/expand_dims_test/NegativeAxisOutOfRange_run1/: validation.json
artifacts/onnxruntime-negative/test/contrib_ops/expand_dims_test/PositiveAxisOutOfRange_run0/: validation.json
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/InvalidBlockSize_run0/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/InvalidBlockSize_run1/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/InvalidBlockSize_run2/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/InvalidGatherAxis_run0/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/InvalidGatherAxis_run1/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/InvalidGatherAxis_run5/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/InvalidIndices_run0/: validation.json
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/InvalidIndices_run1/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/InvalidIndices_run2/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/InvalidIndices_run3/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/InvalidIndices_run4/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/InvalidQuantizeAxis_run2/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/InvalidQuantizeAxis_run3/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/InvalidQuantizeAxis_run4/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/NotSupportedBits_run0/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/NotSupportedBits_run3/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/NotSupportedBits_run5/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/NotSupportedBits_run9/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/ShapeMismatch_run1/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/ShapeMismatch_run3/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/UnsupportedTypes_run10/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/UnsupportedTypes_run12/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/UnsupportedTypes_run15/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/UnsupportedTypes_run16/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/UnsupportedTypes_run18/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/UnsupportedTypes_run2/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/UnsupportedTypes_run22/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/UnsupportedTypes_run3/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/UnsupportedTypes_run4/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/UnsupportedTypes_run9/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/gather_block_quantized_op_test/UnsupportedUInt8DataType_run3/: model.onnx
artifacts/onnxruntime-negative/test/contrib_ops/qlinear_concat_test/ExpectFail_WrongScaleType_0_run0/: model.onnx
artifacts/onnxruntime/test/contrib_ops/attention_op_test/Attention3DMask_run0/: model.onnx
cpp/: ort_cpp_test_extractor.cpp
cpp/runtime_extractor/: CMakeLists.txt  ort_runtime_capture.cpp  ort_runtime_capture.h  ort_runtime_extractor.cpp
metadata/: ort_cpp_test_rules.json
scripts/: extract_from_python_tests.py  extract_test_artifacts.py  generate_artifact_validation_overview.py  update_artifact_validation_expectations.py  validate_test_case.py
src/emx_ort_test_materializer/: __init__.py  artifact_validation_overview.py  extractor.py  ignored_artifact_cases.py  validation.py
tests/: artifact_validation_expected.json  test_artifact_validation.py  test_artifact_validation_docs.py  test_extract_test_artifacts_script.py  test_manifest.py  test_onnxruntime_source.py  test_onnxruntime_submodule_version.py  test_operator_markdown.py  test_runtime_extractor_source.py  test_sparse_validation.py  test_validation_metadata.py
tools/: README.md
tools/cpp/runtime_extractor/: CMakeLists.txt  ort_runtime_capture.cpp  ort_runtime_capture.h  ort_runtime_capture_extra_includes_default.h  ort_runtime_extractor.cpp
tools/python/emx_ort_test_materializer/: __init__.py  artifact_roots.py  artifact_validation_overview.py  extractor.py  ignored_artifact_cases.py  onnxruntime_source.py  operator_inventory.py  operator_markdown.py  writer.py
tools/scripts/: extract_test_artifacts.py  generate_artifact_validation_overview.py  generate_operator_markdown.py  update_artifact_validation_expectations.py  validate_test_case.py
(+9683 files in other folders)
